--- a/nb/027_create_dataset.ipynb
+++ b/nb/027_create_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "362dcff1",
+   "id": "a4ccfe48",
    "metadata": {},
    "source": [
     "# Overview\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92b0ed2a",
+   "id": "367a347c",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b000ff4",
+   "id": "37d4c40f",
    "metadata": {},
    "source": [
     "# Const"
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "04267582",
+   "id": "dfa5fdfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13538bfe",
+   "id": "76b1cda3",
    "metadata": {},
    "source": [
     "# Import everything I need:)"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1f1f0fa5",
+   "id": "1c6e410d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b283bd38",
+   "id": "9c60338f",
    "metadata": {},
    "source": [
     "# Function"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6e0e0c7a",
+   "id": "480a8eb5",
    "metadata": {
     "executionInfo": {
      "elapsed": 4655,
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2e34129c",
+   "id": "3fc597d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45cebacd",
+   "id": "37f40ff8",
    "metadata": {},
    "source": [
     "# Preparation"
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b47b83",
+   "id": "1533067b",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "969ede43",
+   "id": "5f7e9e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72df9ff5",
+   "id": "52507e46",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0ba5f18f",
+   "id": "221ad6a8",
    "metadata": {
     "executionInfo": {
      "elapsed": 12440,
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afdd9851",
+   "id": "ec3a9051",
    "metadata": {},
    "source": [
     "# EDA"
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a5c4159a",
+   "id": "3d9a8a48",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6df903e",
+   "id": "9ad3a896",
    "metadata": {},
    "source": [
     "# 質の良いbssidを選定\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ebf17429",
+   "id": "959f8264",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "413bc551",
+   "id": "03e0d63c",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fd7fc91",
+   "id": "ab44a03b",
    "metadata": {},
    "source": [
     "# Dataseet 作成\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c4a083e5",
+   "id": "ac17ea45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ba743d81",
+   "id": "838f691c",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "98cd9dad",
+   "id": "ec5f1b49",
    "metadata": {
     "papermill": {
      "duration": 0.021272,
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "276ce175",
+   "id": "52c17d74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b902e551",
+   "id": "69dc2b46",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "25ddfcbe",
+   "id": "5e30b768",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "53f2a7e8",
+   "id": "045614a9",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5eabebd",
+   "id": "672e0990",
    "metadata": {},
    "source": [
     "## train作成"
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "94c84b97",
+   "id": "012d28e5",
    "metadata": {
     "papermill": {
      "duration": 0.026514,
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "31d4d4e5",
+   "id": "8e66fcb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b77c53f",
+   "id": "7fdea102",
    "metadata": {},
    "source": [
     "## test作成"
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "26a6c020",
+   "id": "7e426b8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "441836ac",
+   "id": "86c8bd72",
    "metadata": {},
    "outputs": [
     {
@@ -1123,8 +1123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "109f0b6e",
+   "execution_count": 30,
+   "id": "18595dff",
    "metadata": {},
    "outputs": [
     {
@@ -1144,8 +1144,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='102' class='' max='626' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      16.29% [102/626 00:22<01:55]\n",
+       "      <progress value='626' class='' max='626' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [626/626 02:16<00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -1209,18 +1209,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec3d27fd",
+   "execution_count": 31,
+   "id": "9069b9c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed_bssid_0</th>\n",
+       "      <th>fixed_bssid_1</th>\n",
+       "      <th>fixed_bssid_2</th>\n",
+       "      <th>fixed_bssid_3</th>\n",
+       "      <th>fixed_bssid_4</th>\n",
+       "      <th>fixed_bssid_5</th>\n",
+       "      <th>fixed_bssid_6</th>\n",
+       "      <th>fixed_bssid_7</th>\n",
+       "      <th>fixed_bssid_8</th>\n",
+       "      <th>fixed_bssid_9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>fixed_bssid_293</th>\n",
+       "      <th>fixed_bssid_294</th>\n",
+       "      <th>fixed_bssid_295</th>\n",
+       "      <th>fixed_bssid_296</th>\n",
+       "      <th>fixed_bssid_297</th>\n",
+       "      <th>fixed_bssid_298</th>\n",
+       "      <th>fixed_bssid_299</th>\n",
+       "      <th>wp_tmestamp</th>\n",
+       "      <th>path_id</th>\n",
+       "      <th>site_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>1573733327075</td>\n",
+       "      <td>068e4f6926e78ff6d338d2cc</td>\n",
+       "      <td>5dc8cea7659e181adb076a3f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>1573733330322</td>\n",
+       "      <td>068e4f6926e78ff6d338d2cc</td>\n",
+       "      <td>5dc8cea7659e181adb076a3f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-999</td>\n",
+       "      <td>-90</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-75</td>\n",
+       "      <td>-87</td>\n",
+       "      <td>-78</td>\n",
+       "      <td>-78</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-77</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-75</td>\n",
+       "      <td>-88</td>\n",
+       "      <td>1571544332698</td>\n",
+       "      <td>0b6e7a34b2a1b99280b5d3ca</td>\n",
+       "      <td>5da138764db8ce0c98bcaa46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-999</td>\n",
+       "      <td>-90</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-76</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-81</td>\n",
+       "      <td>-81</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-81</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-76</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>1571544337017</td>\n",
+       "      <td>0b6e7a34b2a1b99280b5d3ca</td>\n",
+       "      <td>5da138764db8ce0c98bcaa46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-87</td>\n",
+       "      <td>-86</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-65</td>\n",
+       "      <td>-86</td>\n",
+       "      <td>-81</td>\n",
+       "      <td>-81</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-86</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-81</td>\n",
+       "      <td>-999</td>\n",
+       "      <td>-66</td>\n",
+       "      <td>-86</td>\n",
+       "      <td>1571544345019</td>\n",
+       "      <td>0b6e7a34b2a1b99280b5d3ca</td>\n",
+       "      <td>5da138764db8ce0c98bcaa46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 303 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fixed_bssid_0  fixed_bssid_1  fixed_bssid_2  fixed_bssid_3  fixed_bssid_4  \\\n",
+       "0           -999           -999           -999           -999           -999   \n",
+       "1           -999           -999           -999           -999           -999   \n",
+       "2           -999            -90           -999           -999           -999   \n",
+       "3           -999            -90           -999           -999           -999   \n",
+       "4            -87            -86           -999           -999           -999   \n",
+       "\n",
+       "   fixed_bssid_5  fixed_bssid_6  fixed_bssid_7  fixed_bssid_8  fixed_bssid_9  \\\n",
+       "0           -999           -999           -999           -999           -999   \n",
+       "1           -999           -999           -999           -999           -999   \n",
+       "2           -999            -75            -87            -78            -78   \n",
+       "3           -999            -76           -999            -81            -81   \n",
+       "4           -999            -65            -86            -81            -81   \n",
+       "\n",
+       "   ...  fixed_bssid_293  fixed_bssid_294  fixed_bssid_295  fixed_bssid_296  \\\n",
+       "0  ...             -999             -999             -999             -999   \n",
+       "1  ...             -999             -999             -999             -999   \n",
+       "2  ...             -999             -999             -999              -77   \n",
+       "3  ...             -999             -999             -999              -81   \n",
+       "4  ...             -999              -86             -999              -81   \n",
+       "\n",
+       "   fixed_bssid_297  fixed_bssid_298  fixed_bssid_299    wp_tmestamp  \\\n",
+       "0             -999             -999             -999  1573733327075   \n",
+       "1             -999             -999             -999  1573733330322   \n",
+       "2             -999              -75              -88  1571544332698   \n",
+       "3             -999              -76             -999  1571544337017   \n",
+       "4             -999              -66              -86  1571544345019   \n",
+       "\n",
+       "                    path_id                   site_id  \n",
+       "0  068e4f6926e78ff6d338d2cc  5dc8cea7659e181adb076a3f  \n",
+       "1  068e4f6926e78ff6d338d2cc  5dc8cea7659e181adb076a3f  \n",
+       "2  0b6e7a34b2a1b99280b5d3ca  5da138764db8ce0c98bcaa46  \n",
+       "3  0b6e7a34b2a1b99280b5d3ca  5da138764db8ce0c98bcaa46  \n",
+       "4  0b6e7a34b2a1b99280b5d3ca  5da138764db8ce0c98bcaa46  \n",
+       "\n",
+       "[5 rows x 303 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bc7c278c",
+   "execution_count": 32,
+   "id": "7e8e7308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,8 +1443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b843b8e1",
+   "execution_count": 33,
+   "id": "c4f8d380",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,8 +1453,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ba821be8",
+   "execution_count": 34,
+   "id": "e0334c6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b4fcfe5",
+   "id": "f16e5ed9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1258,14 +1472,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47ed4189",
+   "id": "9a838acc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "f3994725",
+   "id": "b912daa3",
    "metadata": {},
    "source": [
     "\n",
