[update] nb027, run

--- a/nb/027_create_dataset.ipynb
+++ b/nb/027_create_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4ccfe48",
+   "id": "576104cb",
    "metadata": {},
    "source": [
     "# Overview\n",
@@ -12,14 +12,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "367a347c",
+   "id": "dd2d3206",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dec5b94\n"
+      "af355ac\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d4c40f",
+   "id": "05727a1e",
    "metadata": {},
    "source": [
     "# Const"
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dfa5fdfb",
+   "id": "41c8a884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b1cda3",
+   "id": "dbc1cadb",
    "metadata": {},
    "source": [
     "# Import everything I need:)"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1c6e410d",
+   "id": "4a04c5bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c60338f",
+   "id": "c9881074",
    "metadata": {},
    "source": [
     "# Function"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "480a8eb5",
+   "id": "fe4bdba4",
    "metadata": {
     "executionInfo": {
      "elapsed": 4655,
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3fc597d8",
+   "id": "06ed890c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37f40ff8",
+   "id": "6489a158",
    "metadata": {},
    "source": [
     "# Preparation"
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1533067b",
+   "id": "aabd7bef",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5f7e9e02",
+   "id": "e6e53279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52507e46",
+   "id": "60222cdf",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "221ad6a8",
+   "id": "4ab255ea",
    "metadata": {
     "executionInfo": {
      "elapsed": 12440,
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec3a9051",
+   "id": "1f74f8de",
    "metadata": {},
    "source": [
     "# EDA"
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3d9a8a48",
+   "id": "7bf9c10f",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ad3a896",
+   "id": "49f9096b",
    "metadata": {},
    "source": [
     "# 質の良いbssidを選定\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "959f8264",
+   "id": "2702de6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,15 +425,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "03e0d63c",
+   "id": "25f8dbad",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 49.7 s, sys: 5.81 s, total: 55.6 s\n",
-      "Wall time: 1min 47s\n"
+      "CPU times: user 35.7 s, sys: 2.71 s, total: 38.4 s\n",
+      "Wall time: 39.3 s\n"
      ]
     }
    ],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab44a03b",
+   "id": "c7a25f8d",
    "metadata": {},
    "source": [
     "# Dataseet 作成\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ac17ea45",
+   "id": "8acb20cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "838f691c",
+   "id": "ff9c4df5",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ec5f1b49",
+   "id": "a244a06d",
    "metadata": {
     "papermill": {
      "duration": 0.021272,
@@ -637,8 +637,8 @@
       "4413\n",
       "5dc8cea7659e181adb076a3f\n",
       "4443\n",
-      "CPU times: user 5min 11s, sys: 30.5 s, total: 5min 42s\n",
-      "Wall time: 10min 54s\n"
+      "CPU times: user 3min 42s, sys: 11.2 s, total: 3min 53s\n",
+      "Wall time: 3min 58s\n"
      ]
     }
    ],
@@ -677,8 +677,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "52c17d74",
+   "execution_count": 14,
+   "id": "27dcbc58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,8 +700,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "69dc2b46",
+   "execution_count": 15,
+   "id": "8de709f6",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='626' class='' max='626' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [626/626 00:51<00:00]\n",
+       "      100.00% [626/626 00:33<00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -755,8 +755,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "5e30b768",
+   "execution_count": 16,
+   "id": "7ab0f0e3",
    "metadata": {},
    "outputs": [
     {
@@ -788,31 +788,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ec05e28fdb4d2aba0dcdd7dc7e4ec1e3501c9293</td>\n",
-       "      <td>46</td>\n",
-       "      <td>5da1389e4db8ce0c98bd0547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11567178cc5ca582a37c4733207c77739e1bf5fd</td>\n",
-       "      <td>46</td>\n",
-       "      <td>5da1389e4db8ce0c98bd0547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>889bfa434d66eed8c386ccbc90f445932c43f8dd</td>\n",
-       "      <td>46</td>\n",
-       "      <td>5da1389e4db8ce0c98bd0547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>29c7d9e757292e7b2b3d00dc4dae7514531b20b4</td>\n",
        "      <td>46</td>\n",
        "      <td>5da1389e4db8ce0c98bd0547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>c83a81634993ed9d129ca0176cdd01ccc9a8788d</td>\n",
+       "      <td>46</td>\n",
+       "      <td>5da1389e4db8ce0c98bd0547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ddf350d0ccf75a6e540a00adbc7de2a02f093fd4</td>\n",
+       "      <td>46</td>\n",
+       "      <td>5da1389e4db8ce0c98bd0547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ec05e28fdb4d2aba0dcdd7dc7e4ec1e3501c9293</td>\n",
+       "      <td>46</td>\n",
+       "      <td>5da1389e4db8ce0c98bd0547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ea26617bc19a2b6a0a3798c1f3aa1de25442e716</td>\n",
+       "      <td>b24fb7ab35b6fb9be0fcc76a4922b90634f5deb9</td>\n",
        "      <td>46</td>\n",
        "      <td>5da1389e4db8ce0c98bd0547</td>\n",
        "    </tr>\n",
@@ -822,14 +822,14 @@
       ],
       "text/plain": [
        "                                      bssid  count                   site_id\n",
-       "0  ec05e28fdb4d2aba0dcdd7dc7e4ec1e3501c9293     46  5da1389e4db8ce0c98bd0547\n",
-       "1  11567178cc5ca582a37c4733207c77739e1bf5fd     46  5da1389e4db8ce0c98bd0547\n",
-       "2  889bfa434d66eed8c386ccbc90f445932c43f8dd     46  5da1389e4db8ce0c98bd0547\n",
-       "3  29c7d9e757292e7b2b3d00dc4dae7514531b20b4     46  5da1389e4db8ce0c98bd0547\n",
-       "4  ea26617bc19a2b6a0a3798c1f3aa1de25442e716     46  5da1389e4db8ce0c98bd0547"
+       "0  29c7d9e757292e7b2b3d00dc4dae7514531b20b4     46  5da1389e4db8ce0c98bd0547\n",
+       "1  c83a81634993ed9d129ca0176cdd01ccc9a8788d     46  5da1389e4db8ce0c98bd0547\n",
+       "2  ddf350d0ccf75a6e540a00adbc7de2a02f093fd4     46  5da1389e4db8ce0c98bd0547\n",
+       "3  ec05e28fdb4d2aba0dcdd7dc7e4ec1e3501c9293     46  5da1389e4db8ce0c98bd0547\n",
+       "4  b24fb7ab35b6fb9be0fcc76a4922b90634f5deb9     46  5da1389e4db8ce0c98bd0547"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,8 +841,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "045614a9",
+   "execution_count": 17,
+   "id": "9a85527a",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "672e0990",
+   "id": "3a9f06ef",
    "metadata": {},
    "source": [
     "## train作成"
@@ -950,8 +950,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "012d28e5",
+   "execution_count": 18,
+   "id": "a8c6dd2e",
    "metadata": {
     "papermill": {
      "duration": 0.026514,
@@ -980,8 +980,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='2' class='' max='2' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [2/2 02:29<00:00]\n",
+       "      <progress value='24' class='' max='24' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [24/24 18:38<00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -1005,8 +1005,8 @@
     "train_time_diffs = []\n",
     "rows = []\n",
     "\n",
-    "# for building in progress_bar(used_buildings):\n",
-    "for building in progress_bar(used_buildings[:2]):\n",
+    "for building in progress_bar(used_buildings):\n",
+    "# for building in progress_bar(used_buildings[:2]):\n",
     "    bssids = test_bssid[building]\n",
     "    fixed_bssids = dict_fixed_bssid[building].bssid.values\n",
     "\n",
@@ -1074,8 +1074,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "8e66fcb3",
+   "execution_count": 19,
+   "id": "8d6709e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fdea102",
+   "id": "eaac1f4c",
    "metadata": {},
    "source": [
     "## test作成"
@@ -1092,8 +1092,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7e426b8e",
+   "execution_count": 20,
+   "id": "e3e807e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,8 +1102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "86c8bd72",
+   "execution_count": 21,
+   "id": "7f1cfe9e",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "1578465315137"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,8 +1123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "18595dff",
+   "execution_count": 22,
+   "id": "b7712c85",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='626' class='' max='626' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [626/626 02:16<00:00]\n",
+       "      100.00% [626/626 01:40<00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -1209,8 +1209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "9069b9c0",
+   "execution_count": 23,
+   "id": "72cd0b2c",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
        "[5 rows x 303 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,8 +1433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "7e8e7308",
+   "execution_count": 24,
+   "id": "71367d96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,8 +1443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "c4f8d380",
+   "execution_count": 25,
+   "id": "3f746eab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,8 +1453,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e0334c6f",
+   "execution_count": 26,
+   "id": "6d2c0a54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1464,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f16e5ed9",
+   "id": "978bbe1e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1472,14 +1472,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a838acc",
+   "id": "3cdb9c32",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "b912daa3",
+   "id": "ea7c73b7",
    "metadata": {},
    "source": [
     "\n",
